--- a/css/style.css
+++ b/css/style.css
@@ -2869,6 +2869,14 @@ h5.preloader-text::after {
   POPUP END
 ===============================*/
 
+/* //////////////////////////// COMMENT BOX CLASS //////////////// */
+.commentBox {
+  height: 120px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+/* //////////////////////////// COMMENT BOX CLASS //////////////// */
+
 .intro_page {
   width: 100%;
   height: 100vh;
