--- a/css/gallery.css
+++ b/css/gallery.css
@@ -95,3 +95,61 @@ button:focus {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
+/* ////////////////////////////////////////// CERTIFICATIONS ////////////////////// */
+.slides-certificate {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  gap: 50px;
+  padding: 0px 20px;
+  transition: all 1s;
+  /* transform: translateX(20%); */
+}
+
+.certificate-image {
+  width: 350px !important;
+  height: 300px !important;
+  transition: all 1s;
+}
+
+@media screen and (max-width: 400px) {
+  .certificate-image {
+    width: 100% !important;
+    height: 200px !important;
+  }
+  .active-certificate {
+    margin: 0px 50px !important;
+  }
+
+  .slides-certificate {
+    transform: translateX(0);
+  }
+}
+.active-certificate {
+  transform: scale(1.4) !important;
+  margin: 0px 100px;
+}
+
+/* /////////////////////// ARROWS //////////////// */
+.slider-arrow-certificate {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.slider-arrow-certificate .arrowIcons {
+  width: 50px;
+  height: 50px;
+  border-radius: 10%;
+  background-color: rgb(66, 58, 58);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
